force-app/main/default/objects/NEO_Employee__c/fields/NEO_bloodGroup__c.field-meta.xml
<CustomField>
    <fullName>bloodGroup__c</fullName>
    <label>bloodGroup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A+ve</fullName>
            </value>
            <value>
                <fullName>A-ve</fullName>
            </value>
            <value>
                <fullName>B+ve</fullName>
            </value>
            <value>
                <fullName>B-ve</fullName>
            </value>
            <value>
                <fullName>AB+ve</fullName>
            </value>
            <value>
                <fullName>AB-ve</fullName>
            </value>
            <value>
                <fullName>O+ve</fullName>
            </value>
            <value>
                <fullName>O-ve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>