force-app/main/default/objects/NEO_Employee__c/fields/NEO_commCity__c.field-meta.xml
<CustomField>
    <fullName>commCity__c</fullName>
    <label>commCity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>