force-app/main/default/objects/NEO_Employee__c/fields/NEO_commonAddressCheck__c.field-meta.xml
<CustomField>
    <fullName>commonAddressCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>commonAddressCheck</label>
    <type>Checkbox</type>
</CustomField>