force-app/main/default/objects/NEO_Employee__c/fields/NEO_commState__c.field-meta.xml
<CustomField>
    <fullName>commState__c</fullName>
    <label>commState</label>
    <length>100</length>
    <type>Text</type>
</CustomField>