force-app/main/default/objects/NEO_Employee__c/fields/NEO_commZipCode__c.field-meta.xml
<CustomField>
    <fullName>commZipCode__c</fullName>
    <label>commZipCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>