force-app/main/default/objects/NEO_Employee__c/fields/NEO_currentStage__c.field-meta.xml
<CustomField>
    <fullName>currentStage__c</fullName>
    <label>currentStage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>