force-app/main/default/objects/NEO_Employee__c/fields/NEO_docsFinalisedDate__c.field-meta.xml
<CustomField>
    <fullName>docsFinalisedDate__c</fullName>
    <label>docsFinalisedDate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>