force-app/main/default/objects/NEO_Employee__c/fields/NEO_docsVerifiedBy__c.field-meta.xml
<CustomField>
    <fullName>docsVerifiedBy__c</fullName>
    <label>docsVerifiedBy</label>
    <length>25</length>
    <type>Text</type>
</CustomField>