force-app/main/default/objects/NEO_Employee__c/fields/NEO_EmergencyContact_Phone__c.field-meta.xml
<CustomField>
    <fullName>EmergencyContact_Phone__c</fullName>
    <label>EmergencyContact_Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>