force-app/main/default/objects/NEO_Employee__c/fields/NEO_EmergencyContact_Relation__c.field-meta.xml
<CustomField>
    <fullName>EmergencyContact_Relation__c</fullName>
    <label>EmergencyContact_Relation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>