force-app/main/default/objects/NEO_Employee__c/fields/NEO_initialLogin__c.field-meta.xml
<CustomField>
    <fullName>initialLogin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>initialLogin</label>
    <type>Checkbox</type>
</CustomField>