force-app/main/default/objects/NEO_Employee__c/fields/NEO_isApprovedByAdmin__c.field-meta.xml
<CustomField>
    <fullName>isApprovedByAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked whenever the admin clicks on the approve button present in the document verification form.</description>
    <label>isApprovedByAdmin</label>
    <type>Checkbox</type>
</CustomField>