force-app/main/default/objects/NEO_Employee__c/fields/NEO_isCodeOfConductAvailable_Admin__c.field-meta.xml
<CustomField>
    <fullName>isCodeOfConductAvailable_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCodeOfConductAvailable_Admin</label>
    <type>Checkbox</type>
</CustomField>