force-app/main/default/objects/NEO_Employee__c/fields/NEO_isEduCertificatesAvailable__c.field-meta.xml
<CustomField>
    <fullName>isEduCertificatesAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isEduCertificatesAvailable</label>
    <type>Checkbox</type>
</CustomField>