force-app/main/default/objects/NEO_Employee__c/fields/NEO_isEduCertificatesAvailable_Admin__c.field-meta.xml
<CustomField>
    <fullName>isEduCertificatesAvailable_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isEduCertificatesAvailable_Admin</label>
    <type>Checkbox</type>
</CustomField>