force-app/main/default/objects/NEO_Employee__c/fields/NEO_isEmployeeDocumentVerficationDone__c.field-meta.xml
<CustomField>
    <fullName>isEmployeeDocumentVerficationDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isEmployeeDocumentVerficationDone</label>
    <type>Checkbox</type>
</CustomField>