force-app/main/default/objects/NEO_Employee__c/fields/NEO_isExperienceLetterAvailable__c.field-meta.xml
<CustomField>
    <fullName>isExperienceLetterAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isExperienceLetterAvailable</label>
    <type>Checkbox</type>
</CustomField>