force-app/main/default/objects/NEO_Employee__c/fields/NEO_isPFNominationAvailable__c.field-meta.xml
<CustomField>
    <fullName>isPFNominationAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPFNominationAvailable</label>
    <type>Checkbox</type>
</CustomField>