force-app/main/default/objects/NEO_Employee__c/fields/NEO_isPFNominationAvailable_Admin__c.field-meta.xml
<CustomField>
    <fullName>isPFNominationAvailable_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPFNominationAvailable_Admin</label>
    <type>Checkbox</type>
</CustomField>