force-app/main/default/objects/NEO_Employee__c/fields/NEO_isPhotoAvailable__c.field-meta.xml
<CustomField>
    <fullName>isPhotoAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPhotoAvailable</label>
    <type>Checkbox</type>
</CustomField>