force-app/main/default/objects/NEO_Employee__c/fields/NEO_isProofOfAddressAvailable_Admin__c.field-meta.xml
<CustomField>
    <fullName>isProofOfAddressAvailable_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isProofOfAddressAvailable_Admin</label>
    <type>Checkbox</type>
</CustomField>