force-app/main/default/objects/NEO_Employee__c/fields/NEO_isResumeAvailable_Admin__c.field-meta.xml
<CustomField>
    <fullName>isResumeAvailable_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isResumeAvailable_Admin</label>
    <type>Checkbox</type>
</CustomField>