force-app/main/default/objects/NEO_Employee__c/fields/NEO_isSalaryS__c.field-meta.xml
<CustomField>
    <fullName>isSalaryS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSalarySlipAvailable</label>
    <type>Checkbox</type>
</CustomField>