force-app/main/default/objects/NEO_Employee__c/fields/NEO_lang1__c.field-meta.xml
<CustomField>
    <fullName>lang1__c</fullName>
    <label>lang1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>