force-app/main/default/objects/NEO_Employee__c/fields/NEO_lang1Speak__c.field-meta.xml
<CustomField>
    <fullName>lang1Speak__c</fullName>
    <defaultValue>false</defaultValue>
    <label>lang1Speak</label>
    <type>Checkbox</type>
</CustomField>