force-app/main/default/objects/NEO_Employee__c/fields/NEO_lang2Write__c.field-meta.xml
<CustomField>
    <fullName>lang2Write__c</fullName>
    <defaultValue>false</defaultValue>
    <label>lang2Write</label>
    <type>Checkbox</type>
</CustomField>