force-app/main/default/objects/NEO_Employee__c/fields/NEO_lang3Read__c.field-meta.xml
<CustomField>
    <fullName>lang3Read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>lang3Read</label>
    <type>Checkbox</type>
</CustomField>