force-app/main/default/objects/NEO_Employee__c/fields/NEO_maritalStatus__c.field-meta.xml
<CustomField>
    <fullName>maritalStatus__c</fullName>
    <label>maritalStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Unmarried</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>