force-app/main/default/objects/NEO_Employee__c/fields/NEO_mobilePhone__c.field-meta.xml
<CustomField>
    <fullName>mobilePhone__c</fullName>
    <label>mobilePhone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>