force-app/main/default/objects/NEO_Employee__c/fields/NEO_resAddress__c.field-meta.xml
<CustomField>
    <fullName>resAddress__c</fullName>
    <label>resAddress</label>
    <length>100</length>
    <type>Text</type>
</CustomField>