force-app/main/default/objects/NEO_Employee__c/fields/NEO_resZipCode__c.field-meta.xml
<CustomField>
    <fullName>resZipCode__c</fullName>
    <label>resZipCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>