force-app/main/default/objects/NEO_Employee__c/fields/NEO_userName__c.field-meta.xml
<CustomField>
    <fullName>userName__c</fullName>
    <label>userName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>