force-app/main/default/objects/NEO_Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>userName__c</columns>
    <columns>password__c</columns>
    <columns>firstName__c</columns>
    <columns>lastName__c</columns>
    <columns>commCity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>